# secumanager

./: .gitignore  CHANGELOG.md  LICENSE  Privacy policy.MD  README.md  pyproject.toml
src/: main.py
